--- a/newpipe/build.gradle
+++ b/newpipe/build.gradle
@@ -9,8 +9,6 @@ android {
     defaultConfig {
         minSdk 26
         targetSdk 35
-
-        // Library তে সাধারণত versionCode ও versionName লাগে না, কিন্তু রাখলে ক্ষতি নেই
         versionCode 1
         versionName "1.0"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,7 +30,6 @@ android {
         coreLibraryDesugaringEnabled false
     }
 
-    // Binding ক্লাস জেনারেশনের জন্য অত্যন্ত গুরুত্বপূর্ণ
     buildFeatures {
         viewBinding true
         buildConfig true
@@ -45,34 +42,34 @@ dependencies {
     //*---------------------------------------------------*//
     //----------------desugar_jdk_libs_nio-----------------//
     //*---------------------------------------------------*//
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs_nio:2.0.4'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs_nio:${versions.desugar}"
 
     //*---------------------------------------------------*//
-    //----------------------Androidx-----------------------//
+    //----------------------AndroidX-----------------------//
     //*---------------------------------------------------*//
-    implementation "com.google.android.material:material:1.12.0"
-    implementation "androidx.appcompat:appcompat:1.7.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
-    implementation "androidx.preference:preference:1.2.1"
+    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
+    implementation "com.google.android.material:material:${versions.material}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraint}"
+    implementation "androidx.preference:preference:${versions.preference}"
     
     //*---------------------------------------------------*//
     //*-------------VIDEO EXTRACTION (NewPipe)-------------//
     //*---------------------------------------------------*//
-    implementation "com.github.TeamNewPipe:NewPipeExtractor:v0.24.8"
+    implementation "com.github.TeamNewPipe:NewPipeExtractor:${versions.newpipeExtractor}"
     
     //*---------------------------------------------------*//
     //*------------OKHTTP Request & Networking-------------//
     //*---------------------------------------------------*//
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
     
     //*---------------------------------------------------*//
     //*-----------RXJAVA3 Callback & Management------------//
     //*---------------------------------------------------*//
-    implementation "io.reactivex.rxjava3:rxjava:3.1.8"
-    implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
+    implementation "io.reactivex.rxjava3:rxjava:${versions.rxjava}"
+    implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroid}"
     
     //*---------------------------------------------------*//
     //*---------------Time Management & Utils--------------//
     //*---------------------------------------------------*//
-    implementation "org.ocpsoft.prettytime:prettytime:5.0.8.Final"
+    implementation "org.ocpsoft.prettytime:prettytime:${versions.prettytime}"
 }
