--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,10 @@
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
+            
+        <receiver
+            android:name=".player.PlayerActionReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
